Bug 168028 - Re-added Trash Places item shows incorrect full/empty icon state
Summary: Re-added Trash Places item shows incorrect full/empty icon state
Status: RESOLVED FIXED
Alias: None
Product: kfile
Classification: Unmaintained
Component: kfileplacesview (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-01 20:02 UTC by Eike Hein
Modified: 2008-08-13 16:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2008-08-01 20:02:48 UTC
Version:            (using KDE 4.1.0)
Installed from:    Gentoo Packages
Compiler:          gcc 4.3.1 
OS:                Linux

Upon removing Trash from the Places sidebar in Dolphin and then re-adding it manually, the icon shows an incorrect full/empty state: It always shows the trash as full, even when it's empty. The entry in the xbel file gets written with the "-full" suffix icon. The "Empty Trash" context menu action for the Places item has correct state.

Steps to reproduce:
- Start a vanilla KDE 4. The trash should be empty.
- Start Dolphin. Remove the "Trash" Places item.
- Set Dolphin to trash:/. Add the location to Places from the file view's context menu item.
- See the icon show a full state, despite the trash being empty. "Empty Trash" in its context menu is correctly disabled, however.
Comment 1 Kevin Ottens 2008-08-13 16:34:35 UTC
SVN commit 846465 by ervin:

Just check that we're not using the "-full" version of an icon for the
trash when adding a place.

BUG: 168028


 M  +9 -1      kfileplacesitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=846465