Just check that we're not using the "-full" version of an icon for the trash when adding a place.

BUG: 168028

svn path=/trunk/KDE/kdelibs/; revision=846465